--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Byte-compiled / optimized / DLL files
+# bYTe-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
@@ -99,3 +99,6 @@ ENV/
 
 # mypy
 .mypy_cache/
+
+.idea
+my.cnf
